Clean up task history repository
It's a first attempt to make the code around this a little easier to understand.

+review REVIEW-6141